<resources>
    <string name="app_name">Complete control</string>
    <string name="open_nav">Abrir navegador</string>
    <string name="close_nav">cerrar navegador</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Bienvenido !"</string>
    <string name="invalid_username">No valido usuario</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string-array name="opciones">
        <item>Añadir</item>
        <item>Modificar</item>
        <item>Eliminar</item>
        <item>Ayuda</item>
    </string-array>
    <string name="title_activity_place">ActivityPlace</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Complete control</string>
    <string name="nav_header_subtitle">renatopinowo@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuración</string>
    <string name="action_help">Ayuda</string>
    <string name="action_leaving">Cerrar sesión</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Dispositivos</string>
    <string name="menu_slideshow">Mapa</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="content_perfil">Perfil</string>
    <string name="content_cerrar_sesion">Cerrar sesión</string>

    <string name="lblNombre">Nombre</string>
    <string name="lblEdad">Edad</string>
    <string name="btnAceptar">Aceptar y Notificar</string>

    <!-- contenido imgButton -->
    <string name="content_giroscopy">Sensor de giroscopio</string>
    <string name="content_proximity">Sensor de proximidad</string>
    <string name="content_rotation">Sensor de rotacion</string>

    <!--Google Maps-->
    <string name="google_maps_key">AIzaSyAznfT6TGn40QaKKhv8GyDns1PPahNgJBg</string>

    <!--Mapbox -->

    <string name="app_name_mapbox">MapBox</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiY3Vyc2VoYW50YXIiLCJhIjoiY2xvNTU5ZTZ0MDcxeDJybDBleGFnZmt0dyJ9.TRjj0xdX5BrLkzj2Vx1nGA</string>


    <string name="mapbox_access_PkEY">pk.eyJ1IjoiY3Vyc2VoYW50YXIiLCJhIjoiY2xvNTU5ZTZ0MDcxeDJybDBleGFnZmt0dyJ9.TRjj0xdX5BrLkzj2Vx1nGA</string>
    <string name="mapbox_access_Skey">sk.eyJ1IjoiY3Vyc2VoYW50YXIiLCJhIjoiY2xvNTVwaDFyMDJ5bTJqbXlteGR2dzY4YiJ9.piWIaBe1vs-mIUsKlewJzg</string>
    <string name="NAVIGATION_SETTINGS">Opcion\nAyuda\nSalir</string>
    <string name="title_activity_main">MainActivity</string>

    <!--Para que funcione la card -->

    <string name="txtNombreCell">NoText</string>
    <string name="txtNumeroCell">000000000</string>
    <string name="txtMarcaCell">Compani</string>

    <string name="txtNombreConfig">Nombre de la opcion</string>
    <string name="txtDescripcion">Descripcion de la opcion</string>

    <!-- String para textos grandes -->

    <string name="descriptionHome">Hola, para iniciar la aplicacion aun esta en una version de prueba de lo que quiero que llegue a ser,
    por lo que proximamente se implementaran muchas funciones para dar lo que realmente quiero entregar. Dicho esto, agradezco todo el apoyo entregado</string>

</resources>