<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view_content">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/celular"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_cuenta"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/content_perfil"
            />
        <item
            android:id="@+id/nav_cerrar_sesion"
            android:icon="@android:drawable/ic_menu_close_clear_cancel"
            android:title="@string/content_cerrar_sesion"
            />
    </group>

</menu>