<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <TextView
        android:id="@+id/txtTittleHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Complete control"
        android:textSize="34dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_home" />

    <TextView
        android:id="@+id/txtTittleSensores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="Sensores"
        android:textSize="34dp"
        app:layout_constraintBottom_toTopOf="@+id/imagenProximity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtDescriptionHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="44dp"
        android:layout_marginRight="7dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/descriptionHome"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTittleHome" />

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/white3"
        android:textAlignment="center"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/imagenRotacion"
        android:layout_width="100dp"
        android:layout_height="85dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="76dp"
        android:background="@drawable/dialogbkg"
        android:contentDescription="@string/content_rotation"
        android:onClick="openRotationVector"
        android:scaleType="centerCrop"
        android:src="@android:drawable/ic_media_previous"
        android:text="Rotacion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/imagenGiroscopy"
        android:layout_width="111dp"
        android:layout_height="86dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/dialogbkg"
        android:contentDescription="@string/content_giroscopy"
        android:onClick="openGyroscope"
        android:scaleType="centerCrop"
        android:src="@android:drawable/ic_menu_always_landscape_portrait"
        android:text="Giroscopio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imagenProximity"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_below="@+id/imagenGiroscopy"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="68dp"
        android:text="Proximidad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/imagenProximity"
        app:layout_constraintVertical_bias="0.019" />

    <Button
        android:id="@+id/imagenProximity"
        android:layout_width="100dp"
        android:layout_height="85dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="76dp"
        android:background="@drawable/dialogbkg"
        android:contentDescription="@string/content_proximity"
        android:onClick="openProximity"
        android:scaleType="centerCrop"
        android:src="@android:drawable/ic_menu_zoom"
        android:text="Proximity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imagenRotacion" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_below="@+id/imagenGiroscopy"
        android:layout_marginTop="8dp"
        android:text="Giroscopio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.361"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenGiroscopy"
        app:layout_constraintVertical_bias="0.019" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_below="@+id/imagenGiroscopy"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:text="Rotacion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenRotacion"
        app:layout_constraintVertical_bias="0.02" />


</androidx.constraintlayout.widget.ConstraintLayout>